package com.qmp.prenda;

public enum Categoria {
  CALZADO, PARTE_SUPERIOR, PARTE_INFERIOR, ACCESORIO;
}
