package com.qmp;

public enum Material {
  ALGODON, JEAN, CUERO, PIQUE, ACETATO;
}
