package com.qmp;

public enum Trama {
  LISA, RAYADA, LUNARES, CUADROS, ESTAMPADO;
}
