package com.qmp.clima;

public interface ServicioClima {
  
  int temperatura(String lugar);
  String probabilidadDeLluvias(String lugar);
  double gastoActual();
}
